# onuj

./: .gitignore  Makefile  RESEARCH.md  SPEC.md  docker-compose.yml  package-lock.json  package.json
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial.py  002_magic_link_api_keys.py
api/app/: config.py  db.py  main.py
api/app/middleware/: workspace.py
api/app/models/: __init__.py  api_key.py  cluster.py  conversation.py  magic_link_token.py  user.py  workspace.py
api/app/routers/: __init__.py  api_keys.py  auth.py  dashboard.py  ingest.py  workspace.py
api/app/services/: auth.py  processing.py
api/tests/: smoke_test.py
sdk/: pyproject.toml
sdk/juno/: __init__.py  _backfill.py  _buffer.py
sdk/juno/wrappers/: anthropic.py  openai.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/actions/: waitlist.ts
src/app/api/docs-chat/: route.ts
src/components/: CountUp.tsx  DocsChatbot.tsx  Grain.tsx  HeroCanvas.tsx  Marquee.tsx  WaitlistForm.tsx
web/src/: proxy.ts
web/src/app/: globals.css
web/src/app/actions/: waitlist.ts
web/src/app/api/docs-chat/: route.ts
web/src/app/auth/verify/: page.tsx
web/src/app/dashboard/: layout.tsx  page.tsx
web/src/app/dashboard/clusters/: page.tsx
web/src/app/dashboard/conversations/: page.tsx
web/src/app/docs/: page.tsx
web/src/app/login/: page.tsx
web/src/app/onboarding/: page.tsx
web/src/components/: FadeUp.tsx  HeroCanvas.tsx  WaitlistForm.tsx
web/src/lib/: api.ts
worker/: Dockerfile  cluster.py  config.py  gap.py  main.py  pyproject.toml
(+4 files in other folders)
