[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "juno-sdk"
version = "0.1.0"
description = "User intent analytics for conversational AI products"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]

[tool.hatch.build.targets.wheel]
packages = ["juno"]
